<resources>
    <string name="app_name">Hiling Galing</string>
    <string name="home_title">Hiling\nGaling</string>
    <string name="title_activity_maps">Map</string>
    <string name="home_description">Identify Herbal</string>
    <string name="camera">Camera</string>
    <string name="photo">Photo Album</string>
    <string name="result_title">Sorry</string>
    <string name="no_result">We don\'t recognize your image. Please try another image instead.</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GET STARTED</string>
    <string name="slide_1_title">Your Benefits</string>
    <string name="slide_1_desc">Curing a remedy with the use of herbs can prove to be really beneficial. Herbs deal with health in all aspects and physical well-being.</string>
    <string name="slide_2_title">Life Enhancing</string>
    <string name="slide_2_desc">This app is the perfect companion when you need quick and natural remedies for common health problem.</string>
    <string name="slide_3_title">At Your Fingertips</string>
    <string name="slide_3_desc">Think of it as having instant access to a handbook of natural home remedies &amp; cures right on your mobile, available anytime and anywhere.</string>
    <string name="main_content_description_implementation_image">implementation image</string>
    <string name="transition_name_implementation_image" translatable="false">shared_element</string>
    <string name="no_results">We can\'t recognize your image…</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="plant_name">Scientific Name:</string>
    <string name="description">Description:</string>
    <string name="treatment">Treatment:</string>
    <string name="usage">Preparation &amp; Use:</string>
    <string name="amplaya_title">Ampalaya Leaves</string>
    <string name="amplaya_name">Momordica charantia</string>
    <string name="amplaya_location">Grassland, Roadside &amp; Pathways\n(Dalumpinas Este, Calabugao, San Agustin)</string>
    <string name="amplaya_common">Ampalaya (Tag.)\n	Ampalia (Tag.)\nApalaya (Tag.)\nApalia (Pamp.)\nApape (Ibn.)\nApapet (Itn.)\nMargoso (Tag.)</string>
    <string name="amplaya_topical">Topical</string>
    <string name="amplaya_good">Diabetes</string>
    <string name="amplaya_desc">This vegetable is very popular worldwide in treating diabetes for it contains compounds such as flavonoids and alkaloids. It has a high medicinal value that can help to treat and prevent some serious diseases. This mixture helps the body to produce more insulin which controls the blood sugar levels of a diabetic person.</string>
    <string name="amplaya_treatment">Diabetes, Analgesic, Eye problems, Respiratory ailments, Hair and scalp problems, Weight lossSource of energy, Antioxidant, Stomach problems, Hepatoprotection, HIV virus, Hemorrhoids</string>
    <string-array name="amplaya_usage">
        <item>Both wild and cultivated forms are edible.</item>
        <item>Fruit of wild form usually roasted over fire and eaten with salt or "heko."</item>
        <item>The leaves and fruit - used as vegetables - are excellent sources of Vit B, iron, calcium, and phosphorus. It has twice the amount of beta carotene in broccoli and twice the calcium content of spinach. Characteristically bitter-tasting, slight soaking in salty water before cooking removes some of the bitter taste of the fruit.</item>
        <item>Seeds also used to expel worms.</item>
    </string-array>
    <string name="sambong_title">Sambong</string>
    <string name="sambong_name">Blumea camphor</string>
    <string name="sambong_location">Grassland &amp; Pathways\n(Pagdaraoan, Birunget, Biday, Namtutan, Masicong)</string>
    <string name="sambong_common">Alibhun; Alimon (Panay Bisaya)\nAyoban; Bukodkud; Gintin-gintin; Hamlibon;Bukadkad (Leyte)\nDalapot (Cebu Bisaya)\nKaliban, Gabon subsub (Tagalog)\nKalibura (Tagbanua)\nLabulan (Subanum)\nLakadbulan (Bisaya, Sulu)\nSambun (Sulu)\nSob-sob, Subusub, subsob (Iloko)</string>
    <string name="sambong_topical">Intake</string>
    <string name="sambong_good">Cough</string>
    <string name="sambong_desc">Sambong is a half woody, strongly aromatic shrub, densely and softly hairy, 1–4 m high. Stems grow up to 2.5 cm in diameter. Leaves are simple, alternate, elliptic– to oblong–lanceolate, 7– 20 cm long, toothed at the margins, pointed or blunt at the tip, narrowing to a short petiole which are often auricled or appendaged.</string>
    <string name="sambong_treatment">Cough, colds, fever, asthma, pharyngitis, rheumatism, dyspepsia, boils, diarrhea Phytochemicals Phytochemical screening of ethanol leaf extract yielded alkaloids, iridoids, phenolic acids, flavonols and flavonoids.</string>
    <string-array name="sambong_usage">
        <item>A decoction (boil in water) of Sambong leaves as like tea and drink a glass 3 or 4 times a day.</item>
        <item>The leaves can also be crushedor pounded and mixed with coconut oil.</item>
        <item>For headaches, apply crushed and pounded leaves on forehead and temples.</item>
        <item>Decoction of leaves is used assponge bath.</item>
        <item>Decoction of the roots, on the other hand, is to be taken in ascure for fever.</item>
    </string-array>
    <string name="garlic_title">Bayabas</string>
    <string name="garlic_name">Psidium guajava</string>
    <string name="garlic_location">Garden &amp; Grassland\n(Tanqui, Bangcusay, Abut, Camansi)</string>
    <string name="garlic_common">Bagabas (Igorot)\nBayabo (Ibanag)\nBayauas (Bicol, Pangasinan)\nBiabas (Sulu)\nBayawas (Bikol)\nGaiyabat, Gaiyabit (Ifugao)\nGeyabas (Bontok)\nGuayabas, Kalimbahin, Tayabas (Tagalog)\nGuyabas, Bayabas (Iloko)\nGuava (English)</string>
    <string name="garlic_topical">Intake</string>
    <string name="garlic_good">Diarrhea</string>
    <string name="garlic_desc">Bayabas is a somewhat hairy plant reaching a height of 8 meters. Young branches are 4-angled. Leaves are opposite, oblong to elliptic, and 5 to 1 centimeters long, the apex being pointed, and the base usually rounded. Peduncles are 1- to 3-flowered. Flowers are white, 3 to 3.5 centimeters across, with in-curved petals, coming out solitary or two to three in the leaf axils. Numerous stamens form the attractive part of the flower. Inferior ovaries develop into round or obovoid green fruits 4 to 9 centimeters long, turning yellow on ripening and have edible, aromatic, seedy pulp.</string>
    <string name="garlic_treatment">Diarrhea, Flu, Blood pressure, Osteoarthritis, Cancer, Prostate Cancer</string>
    <string-array name="garlic_usage">
        <item>Fresh leaves used for wounds and toothache.</item>
        <item>Applying a gel containing 0.6 percent ajoene, a chemical in garlic, twice daily for one week seems to be as effective as antifungal medication for treating ringworm.</item>
        <item>Decoction or infusion of fresh leaves used for wound cleaning to prevent infection and to facilitate healing.</item>
        <item>Warm decoction of leaves for aromatic baths.</item>
    </string-array>
    <string name="lagundi_title">Lagundi</string>
    <string name="lagundi_name">Vitex negundo</string>
    <string name="lagundi_location">Pathways, Roadsides &amp; Garden\n(Ilocanos Sur, Nagyubuyuban, Madayegdeg)</string>
    <string name="lagundi_common">Agno-casto (Spanish)\nDabtan (Ifugao)\nDangla (Iloko)\nKamalan (Tagalog)\nLingei (Bontok)\nLimo-limo (Iloko)\nSagarai (Bagobo)\nTugas (Visayan)</string>
    <string name="lagundi_topical">Intake</string>
    <string name="lagundi_good">Asthma</string>
    <string name="lagundi_desc">Lagundi is an erect, branched tree or shrub, 2–5 m high. Leaves are usually 5–foliate, rarely with 3 leaflets only and palmately arranged. Leaflets are lanceolate, entire, 4–10 cm long, slightly hairy beneath, and pointed at both ends, the middle leaflets being larger than the others, and distinctly stalked. Flowers are numerous, blue to lavender, 6–7 mm long, borne in terminal inflorescences (panicles) 10–20 cm long. Calyx is hairy, and 5-toothed. Corolla is densely hairy in the throat, and the middle lobe of the lower lip is longest. Fruit is a succulent drupe, globose, black when ripe, about 4 mm in diameter.</string>
    <string name="lagundi_treatment">Cough, colds, fever, asthma, pharyngitis, rheumatism, dyspepsia, boils, diarrhea Phytochemicals Phytochemical screening of ethanol leaf extract yielded alkaloids, iridoids, phenolic acids, flavonols and flavonoids.</string>
    <string-array name="lagundi_usage">
        <item>Boil half cup of chopped fresh or dried leaves in 2 cups of water for10 to 15 minutes. Drink half cup three times a day</item>
        <item>For skin diseases or disorders,apply the decoction of leaves androots directly on skin.</item>
        <item>The root is specially good for treating dyspepsia, worms, boils,colic and rheumatism.</item>
    </string-array>
    <string name="akapulko_title">Akapulco</string>
    <string name="akapulko_name">Senna alata</string>
    <string name="akapulko_location">Roadsides &amp; Garden\n(Cabarsican, Madayegdeg, Lingsat, Sacyud)</string>
    <string name="akapulko_common">Andadisi (Tinggian)\nAncharasi (Igorot)Andalan (Sulu)\nBayabasin, Bikas-bikas, Kasitas (Bikol, Bisaya)\nBuni-buni (Bagobo)\nGamot-sa-buni; Kapurko (Tagalog)Palo China (Bisaya)\nSonting (Tag.)\nSunting (Cebu Bisaya)</string>
    <string name="akapulko_topical">Topical</string>
    <string name="akapulko_good">Stomach problems</string>
    <string name="akapulko_desc">Akapulko is a coarse, erect, branched shrub, 1.5–3 m high. Leaves are pinnate and 40–60 cm long, with orange rachis on stout branches. Each leaf has 16–28 leaflets, 5–15 cm in length, broad and rounded at the apex, with a small point at the tip. Leaflets gradually increase in size from the base towards the tip of the leaf. Inflorescences are terminal and at the axils of the leaves, in simple or panicled racemes, and 10–50 cm long. Flowers are yellow, about 4 cm in diameter, at the axils of thin, yellow, oblong, concave bracts which are 2.5–3 cm long. Pod is rather straight, dark brown or nearly black, about 15 cm long and 15 mm wide. On both sides of the pods there is a wing that runs the length of the pod. Pod contains 50–60 flattened, triangular seeds.</string>
    <string name="akapulko_treatment">Ringworms, skin fungal infections, bronchitis, asthma, diuretic, cough, fever, stomach problems Phytochemicals Phytochemical studies of crude extract of stem bark yielded important secondary metabolites - tannins, steroids, alkaloids, anthraquinones, terpenes, carbohydrates and saponins.</string>
    <string-array name="akapulko_usage">
        <item>For external use, pound the leaves of the Akapulko plant,squeeze the juice and apply on affected areas.</item>
        <item>As the expectorant for bronchitis and dyspnoea, drink decoction(soak and boil for 10 to 15 minutes)of Akapulko leaves. The samepreparation may be used as amouthwash, stringent, and washfor eczema.</item>
        <item>As laxative, cut the plant parts(roots, flowers, and the leaves) into a manageable size then prepare adecoction Note: The decoctionlooses its potency if not used for along time. Dispose leftovers afterone day.</item>
        <item>The pounded leaves of Akapulko has purgative functions, specifically against ringworms</item>
    </string-array>
    <string name="tsaang_title">Tsaang Gubat</string>
    <string name="tsaang_name">Carmona retusa</string>
    <string name="tsaang_location">Grassland, Pathways &amp; Garden\n(Cabarsican, Madayegdeg, Lingsat, Sacyud)</string>
    <string name="tsaang_common">Abraaka (Ilk.)\nArtanusa (C. Bis.)\nDamong maria (Tag.)\nGilbas (C. Bis.)\nKamaria, maria (Tag.)\nTinisas (Tagalog)\nErbaka (Ilk.)\nCintura de S. Jose (Span.)</string>
    <string name="tsaang_topical">Intake</string>
</resources>