<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:contentPaddingTop="16dp"
        app:contentPaddingBottom="16dp"
        app:contentPaddingRight="32dp"
        app:contentPaddingLeft="32dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/plant_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_plant"
                android:layout_marginStart="8dp"
                tools:text="@string/sambong_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="12dp"
                android:text="Common Name:"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_common"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="Ilocano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="12dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_desc"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="@string/sambong_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="12dp"
                android:text="@string/treatment"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:onClick="showSimilarDialog"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="Herbal Plants"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_treatment"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="@string/sambong_treatment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="12dp"
                android:text="Best used for: "
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_best"
                android:layout_marginStart="8dp"
                tools:text="Cough"
                android:textStyle="bold|italic"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/usage"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_classify"
                    android:layout_marginStart="8dp"
                    tools:text="INTAKE"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_usage"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="Location:"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_location"
                android:layout_marginStart="8dp"
                android:text="All over the Philippines."
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="24dp"
                style="@style/Widget.Button.Details"
                android:id="@+id/try_again_btn"
                android:text="IDENTIFY AGAIN"
                android:onClick="identifyAgain"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="Disclaimer"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:onClick="diclaimer"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>
