<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/main_content_description_implementation_image"
        android:scaleType="fitXY"
        android:src="@drawable/home_background" />

    <TextView
        android:id="@+id/hiling_galing"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/home_title" />

    <TextView
        android:id="@+id/favorite_sc"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:textColor="@android:color/white"
        android:layout_marginStart="24dp"
        android:textStyle="bold"
        android:text="@string/home_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:overScrollMode="never"
        android:layout_below="@+id/favorite_sc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:layout_below="@+id/recycler_view"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_centerHorizontal="true"
        android:text="Feedback"
        android:onClick="feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="Disclaimer"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:textStyle="italic"
        android:onClick="diclaimer"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@drawable/ic_search_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="searchPlant"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@null"
        tools:targetApi="m" />

</RelativeLayout>

